--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,31 @@ body,
     overflow:hidden;
 }
 
+.interface {
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    font-family: "bebas";
+}
+
+.restart {
+    display: flex;
+    justify-content: center;
+    position:absolute;
+    top:40%;
+    left: 0;
+    width: 100%;
+    color:#ffffff;
+    font-size: 80px;
+    background:#00000033;
+    padding-top:10px;
+    pointer-events: auto;
+    cursor:pointer;
+}
+
 /**
  * Controls
  */
