--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Rajdhani";
+    src: url("../Rajdhani-Medium.woff");
+}
+
 html,
 body,
 #root {
@@ -9,6 +14,13 @@ body,
     overflow:hidden;
 }
 
+.title {
+    font-family:'Rajdhani';
+    width:30vw;
+    color:#ffffff;
+    font-size:5vw;
+}
+
 .interface {
     position: fixed;
     top:0;
@@ -16,19 +28,18 @@ body,
     width: 100%;
     height: 100%;
     pointer-events: none;
-    font-family: "bebas";
+    font-family: "Rajdhani";
 }
 
 .restart {
     display: flex;
     justify-content: center;
     position:absolute;
-    top:40%;
+    top:50%;
     left: 0;
     width: 100%;
     color:#ffffff;
-    font-size: 80px;
-    background:#00000033;
+    font-size: 40px;
     padding-top:10px;
     pointer-events: auto;
     cursor:pointer;
@@ -38,15 +49,12 @@ body,
     display: flex;
     justify-content: center;
     position:absolute;
-    top:20%;
+    top:10%;
     left: 0;
     width: 100%;
     color:#ffffff;
     font-size: 80px;
-    background:#00000033;
     padding-top:10px;
-    pointer-events: auto;
-    cursor:pointer;
 }
 
 /**
